# kinetic-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  movement_profile.json
src/: lib.rs  main.rs  smoothing.rs
src/platform/: linux.rs  macos.rs  mod.rs  unix.rs  windows.rs
